--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
 
 /* Navbar*/
 .navbar {
-    background-color: whitesmoke;
+    background-color: whitesmoke !important;
 }
 
 .navbar a {
-    color: purple;
+    color: purple !important;
     font-family: cursive;
     font-size: 1.2rem;
     letter-spacing: 0.5px;
@@ -43,7 +43,7 @@ body {
 }
 
 #aboutMe {
-    margin-top: 75px;
+    margin-top: 70px;
 }
 
 #aboutMe h2 {
@@ -54,7 +54,8 @@ body {
 
 /* Project show case*/
 #showCase {
-    margin-top: 75px;
+    margin-top: 80px;
+    
 }
 
 #showCase h2 {
@@ -75,9 +76,13 @@ body {
     display: none;
 }
 
+#projectShow {
+    /* margin-bottom: 175px; */
+}
+
 #projectsShow img {
     width: 100%;
-    height: 550px;
+    height: 540px;
     /* padding: 20px 0; */
     border-radius: 15px;
 }
@@ -89,8 +94,9 @@ body {
 /*Work History*/
 
 #workHistory {
-    margin-top: 8px;
+   /*  margin-bottom: 45px; */
     margin-left: 80px;
+    
 }
 
 #workHistory h2 {
@@ -114,8 +120,12 @@ body {
     font-size: 0.8rem;    
 }
 
+#EduCert {
+    margin-top: 80px;
+}
+
 #education {
-    margin-top: 55px;
+    /* margin-top: 35px; */
 }
 
 #education h2 {
@@ -139,8 +149,12 @@ body {
 }
 
 #certificates {
-    margin-top: 50px;
+    /* margin-top: 65px; */
     margin-left: 80px;
+}
+
+#certificates img{
+    height: 350px;
 }
 
 #certificates h2 {
